# starmap

./: Cargo.toml  README.adoc  generated-sources.json  ng.levitati.Starmap.desktop  ng.levitati.Starmap.yaml
flatpak/: .gitignore  Justfile  ng.levitati.Starmap.desktop  ng.levitati.Starmap.metainfo.xml  ng.levitati.Starmap.yaml
src/: draw.rs  generator.rs  main.rs
src/generator/: names.rs
