[package]
name = "starmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo = "0.0.4"
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_14"] }
pangocairo = "0.20.1"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
relm4 = "0.9"
relm4-components = "0.9"
